Added memcached support.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,3 +43,15 @@ play.i18n.langs = [ "en" ]
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
+# Memcached --
+play.modules.enabled+="com.github.mumoshu.play2.memcached.MemcachedModule"
+
+# To avoid conflict with play2-memcached's Memcached-based cache module
+play.modules.disabled+="play.api.cache.EhCacheModule"
+
+# Well-known configuration provided by Play
+play.modules.cache.defaultCache=default
+play.modules.cache.bindCaches=["db-cache", "user-cache", "session-cache"]
+
+# Tell play2-memcached where your memcached host is located at
+memcached.host="127.0.0.1:11211"
