--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,8 @@
 #
 # This must be changed for production, but we recommend not changing it in this file.
 #
-# See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
+# See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.	
+
 play.crypto.secret = "changeme"
 
 # The application languages
@@ -43,6 +44,8 @@ play.i18n.langs = [ "en" ]
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
+memcachedplugin=disabled
+
 # Memcached --
 play.modules.enabled+="com.github.mumoshu.play2.memcached.MemcachedModule"
 
@@ -54,4 +57,7 @@ play.modules.cache.defaultCache=default
 play.modules.cache.bindCaches=["db-cache", "user-cache", "session-cache"]
 
 # Tell play2-memcached where your memcached host is located at
-memcached.host="127.0.0.1:11211"
+memcached.host="pub-memcache-15867.us-east-1-4.2.ec2.garantiadata.com:15867"
+
+memcached.user="dc7b75e3-af72-4c22-8764-c8ae1415b417"
+memcached.password="9SKZlSGg9g4eEguJ"
