--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,3 +61,13 @@ memcached.host="pub-memcache-15867.us-east-1-4.2.ec2.garantiadata.com:15867"
 
 memcached.user="dc7b75e3-af72-4c22-8764-c8ae1415b417"
 memcached.password="9SKZlSGg9g4eEguJ"
+
+rabbitmq.uri="amqp://yjrjgxai:hxtvMivibGNpq0cuyzFM78CVFLa8XuJg@jaguar.rmq.cloudamqp.com/yjrjgxai"
+rabbitmq.user="yjrjgxai"
+rabbitmq.password="hxtvMivibGNpq0cuyzFM78CVFLa8XuJg"
+
+mongo.host="ds055565.mongolab.com"
+mongo.port="55565"
+mongo.user="CloudFoundry_iilvoggr_6v94fuh0_gt47v18a"
+mongo.password="2xg9hSA41Xw3fucUtpFiEiI72yPFiIBF"
+mongo.db="CloudFoundry_iilvoggr_6v94fuh0"
